ajouter la gestion des gestionnaires avec des opérations CRUD et refactoriser les entités associées